--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bcrypt": "^6.0.0",
     "dotenv": "^17.2.3",
     "framer-motion": "^12.23.24",
+    "json2csv": "^6.0.0-alpha.2",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.554.0",
     "next": "16.0.3",
@@ -23,7 +24,10 @@
     "pg": "^8.16.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "react-simple-typewriter": "^5.0.1"
+    "react-simple-typewriter": "^5.0.1",
+    "react-spinners": "^0.17.0",
+    "resend": "^6.5.2",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
@@ -31,6 +35,7 @@
     "@types/pg": "^8.15.6",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "baseline-browser-mapping": "^2.8.32",
     "eslint": "^9",
     "eslint-config-next": "16.0.3",
     "prisma": "^7.0.0",
