--- a/package.json
+++ b/package.json
@@ -15,15 +15,18 @@
     "@prisma/client": "^7.0.0",
     "bcrypt": "^6.0.0",
     "dotenv": "^17.2.3",
+    "firebase": "^12.7.0",
     "framer-motion": "^12.23.24",
     "json2csv": "^6.0.0-alpha.2",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.554.0",
     "next": "16.0.3",
     "next-auth": "^4.24.13",
+    "nodemailer": "^7.0.12",
     "pg": "^8.16.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-international-phone": "^4.6.1",
     "react-simple-typewriter": "^5.0.1",
     "react-spinners": "^0.17.0",
     "resend": "^6.5.2",
