--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,12 +11,12 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Login to GitHub Container Registry
-        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u Nasif4547 --password-stdin
 
       - name: Build and Push Docker Image
         run: |
-          docker build -t ghcr.io/nasif4567/inovec:latest .
-          docker push ghcr.io/nasif4567/inovec:latest
+          docker build -t ghcr.io/Nasif4547/Inovec:latest .
+          docker push ghcr.io/Nasif4547/Inovec:latest
 
   deploy:
     needs: build-and-push
@@ -29,10 +29,10 @@ jobs:
           username: ubuntu
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
-            echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
-            docker pull ghcr.io/nasif4567/inovec:latest
+            echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u Nasif4547 --password-stdin
+            docker pull ghcr.io/Nasif4547/Inovec:latest
             docker rm -f inovec-app || true
             docker run -d --name inovec-app -p 3000:3000 \
               -e DATABASE_URL="${{ secrets.DATABASE_URL }}" \
               -e NEXTAUTH_SECRET="${{ secrets.NEXTAUTH_SECRET }}" \
-              ghcr.io/nasif4567/inovec:latest
+              ghcr.io/Nasif4547/Inovec:latest
