--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
     "json2csv": "^6.0.0-alpha.2",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.554.0",
-    "next": "16.0.3",
+    "next": "^16.1.4",
     "next-auth": "^4.24.13",
     "nodemailer": "^7.0.12",
     "pg": "^8.16.3",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-international-phone": "^4.6.1",
     "react-simple-typewriter": "^5.0.1",
     "react-spinners": "^0.17.0",
@@ -42,7 +42,7 @@
     "baseline-browser-mapping": "^2.8.32",
     "eslint": "^9",
     "eslint-config-next": "16.0.3",
-    "prisma": "^7.0.0",
+    "prisma": "^6.19.2",
     "tailwindcss": "^4",
     "tsx": "^4.20.6",
     "typescript": "^5"
